ecmascript/parser/tests/test262-error-references/fail/58707e130fe451a8.js.stderr
error: Expected RBracket
 --> $DIR/tests/test262-parser/fail/58707e130fe451a8.js:1:10
  |
1 | void { [1, 2]: 3 };
  |          ^

